--- a/source/pages/index.jade
+++ b/source/pages/index.jade
@@ -127,3 +127,7 @@ block content
 
 	.company(style="background: #263238;")
 		a(href="http://getwisely.com", target="_blank") Wisely
+
+	.company(style="background: #33CC99;")
+    		a(href="http://www.workithealth.com", target="_blank") Workit Health
+    
