--- a/source/pages/index.jade
+++ b/source/pages/index.jade
@@ -144,6 +144,9 @@ block content
 
 	.company(style="background: #263238;")
 		a(href="http://getwisely.com", target="_blank") Wisely
+		
+	.company(style="background: #20b798;")
+		a(href="http://www.workithealth.com", target="_blank") Workit Health
 
 	.company.add-your-own(style="background: #eee; color: #444;")
 		a(href="https://github.com/sampl/madeina2", target="_blank") + Add your company  
